Add pizza definition in Swagger
